Cleanup package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,19 @@
   "name": "kana-typing",
   "version": "0.1.0",
   "private": true,
+  "description": "Kana Typing Game",
+  "author": "Mike Solomon <mikesol@gmail.com>",
+  "repository": "https://github.com/mikesol314/kana-typing",
+  "homepage": "http://mikesol314.github.io/kana-typing",
+  "license": "MIT",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -10,13 +23,8 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,9 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "http://mikesol314.github.io/kana-typing",
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
   }
 }
