--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "description": "Kana Typing Game",
-  "author": "Mike Solomon <mikesol@gmail.com>",
+  "author": "Mike Solomon <mikesol@hey.com>",
   "repository": "https://github.com/mikesol314/kana-typing",
   "homepage": "http://mikesol314.github.io/kana-typing",
   "license": "MIT",
